# unitree_mujoco_go2

./: README.md
example/cpp/: CMakeLists.txt  low_level.cpp  low_swing.cpp  low_swingif.cpp  stand_go2.cpp  stand_go2fk.cpp  stand_go2free.cpp  stand_go2if.cpp  unitreeRobot.cpp  unitreeRobotgo2.cpp
example/cpp/common/: mathTools.h  unitreeLeg.h  unitreeRobot.h  unitreeRobotgo2.h
example/example_sdk/go2/: CMakeLists.txt
example/example_sdk/go2w/: CMakeLists.txt
example/example_sdk/helloworld/: CMakeLists.txt
example/example_sdk/high_level/: CMakeLists.txt  sportmode_test.cpp
example/example_sdk/keyboard/: CMakeLists.txt  read.txt
example/example_sdk/keyboard/src/: gamepad.hpp  keyboard_events  keyboard_events.cpp  keyboard_events_publisher.cpp  keyboard_publisher.cpp
example/example_sdk/low_level/: CMakeLists.txt  stand_example_go2.cpp
example/example_sdk/state_machine_copy/: CMakeLists.txt  cfg.hpp  comm.h  gamepad.hpp  gamepadexample.hpp  main.cpp  robot_controller.hpp  robot_interface.hpp  state_machine.hpp  user_controller.hpp
example/example_sdk/state_machine_copy/logs/2024_09_20_10_49_19/: cfg.txt
example/example_sdk/state_machine_copy/logs/2024_09_20_10_51_18/: log.txt
example/example_sdk/state_machine_copy/logs/2024_09_20_10_51_48/: log.txt
example/example_sdk/state_machine_copy/logs/2024_09_20_10_58_34/: log.txt
example/example_sdk/state_machine_copy/logs/2024_09_20_11_01_15/: log.txt
example/example_sdk/state_machine_copy/logs/2024_09_20_11_01_48/: log.txt
simulate/: CMakeLists.txt  config.yaml  config_push.yaml
simulate/src/: main.cc  main_push.cc
simulate/src/mujoco/: simulate.cc
simulate/src/unitree_sdk2_bridge/: unitree_sdk2_bridge.cc
simulate/test/: test_unitree_sdk2.cpp
terrain_tool/: scene.xml
unitree_robots/go2/: go2.xml  go2_push.xml  scene_push.xml  scene_terrain.xml
usergo1/: CMakeLists.txt  maingo1.cpp
usergo1/FSM/: FSM.cpp
usergo1/common/: enumClass.h  unitreeRobot.cpp
usergo1/control/: BalanceCtrl.h
usergo1/message/: LowlevelCmd.h  LowlevelState.h
usergo2/: CMakeLists.txt  main.cpp  main_FSMtest.cpp  main_lowlevel_test.cpp
usergo2/FSM/: FSM.h  FSM.hpp  FSMState.h  State_BalanceTest.cpp  State_BalanceTest.h  robot_controller.hpp
usergo2/Gait/: FeetEndCal.cpp  FeetEndCal.h  GaitGenerator.cpp  GaitGenerator.h  WaveGenerator.cpp  WaveGenerator.h
usergo2/common/: enumClass.h  unitreeLeg.cpp  unitreeLeg.h  unitreeRobot.cpp  unitreeRobotgo2.h
usergo2/control/: BalanceCtrl.cpp  BalanceCtrl.h  BasicUserController.hpp  CtrlComponent.h  Estimator.cpp  Estimator.h  UserCtrlTest.cpp  UserCtrlTest.h
usergo2/interface/: CmdPanel.h  conversion.cpp  conversion.h  gamepadexample.hpp  robot_interface.hpp
usergo2/logs/2024_09_24_09_45_45/: cfg.txt  log.txt
usergo2/logs/2024_09_27_20_36_07/: log.txt
usergo2/message/: LowlevelCmd.h  LowlevelState.h
